Fixes navigation to banner alignment.
In all but our smallest viewport, site nav left side was pressed against the logo.
That looks awful. Adding padding to site nav on left side to address temporarily.

Revisiting navigation in full soon.

--- a/stylesheet/base.css
+++ b/stylesheet/base.css
@@ -231,6 +231,10 @@ header[role='banner'] {
   clear: left;
 }
 
+#sitenav {
+  padding-left: 10%;
+}
+
 #sitenav li {
   float: left;
   text-align: center;
@@ -327,11 +331,15 @@ article img[class='left'] {
 }
 
 @media only screen and (max-width: 650px) {
+  #sitenav {
+    padding-left: 0%;
+  }
+
   #sitenav li {
     width: 100%;
   }
 
-  #github-badge {
+  #github-ribbon {
     display: none;
   }
 }
